# python-namespace-demo-app1

./: README.md  pyproject.toml
src/namespace_demo/: main_app1.py
src/namespace_demo/app1/: upper_case.py
