[tool.poetry]
name = "python-namespace-demo-app1"
version = "0.3.0"
description = "app1 as sub-command to main cli from shared"
authors = ["Sury Soni <suryasoni@gmail.com>"]
readme = "README.md"
packages = [
    {include = "namespace_demo", from="src"},
]

[tool.poetry.dependencies]
python = "^3.10"
python-namespace-demo-base = {git = "git@github.com:spsoni/python-namespace-demo-base.git",  tag = "0.4.0"}

[tool.poetry.scripts]
demo-cli = "namespace_demo.main_app1:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
